Fixed border radius of grid so that the colored cell would not bleed through corner.

--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body {
     height: 800px;
     margin: 0 auto;
     border: 1px solid rgb(255,255,255);
-    border-radius: 4px;
+    border-radius: 2px;
 }
 
 .square {
